--- a/news.txt
+++ b/news.txt
@@ -1,23 +1,16 @@
              ***®ReMyTeaM DEPO ***
 https://github.com/remytr/enigma2
 _______________________________________________________________
-             ***20.01.2017***	
-   ***POWERVU-KEYLER GUNCELLENMISTIR*** 
-***OSCAM VE CCAM SERVERLAR GUNCELLENMISTIR***
+             ***24.02.2017***
+     ***ReMy_IPTV LIST GUNCELLENMISTIR***			 
 ***23_UYDULU KANAL LIST GUNCELLENMISTIR***
+***POWERVU VE BISS KEYLER GUNCELLENMISTIR*** 
+***OSCAM VE CCAM SERVERLAR GUNCELLENMISTIR***
+             ***26.01.2017***
+     ***ReMy OpenVPN Yenilenmiştir***
+ ***REMY_TEAM PLUGINI GUNCELLENMISTIR***	 
+***TANDBERG FOX SPORT KEYLER GUNCELLENMISTIR*** 			 
+________________________
 
-             ***08.01.2017***
-***IPTV ReMy_BIGLIST BUKETI GUNCELLENMISTIR***
-***IPTV ReMy_EROTIC BUKETI GUNCELLENMISTIR***
-
-             ***07.01.2017***
-   ***REMY_TEAM PLUGINI GUNCELLENMISTIR***
-________________________________________________________________	
-***REMY TEAM PLUGİNİNE VE HOSTINGE DESTEK OLMAK
-ISTEYEN DOSTLAR MAIL ADRESINDEN ILETISIM KURUNUZ***
-
-           Email:arslan_plaza@outlook.com
-             
-              ®ReMy EnigmaTurk TeaM
-		         ṜḝḾỿ♥♣ṰḝḁṂ
-		 
+           Email:arslan_plaza@outlook.com             
+              ®ReMy EnigmaTurk TeaM		 
