--- a/news.txt
+++ b/news.txt
@@ -1,16 +1,17 @@
              ***®ReMyTeaM DEPO ***
 https://github.com/remytr/enigma2
 _______________________________________________________________
-             ***25.02.2017***
-     ***ReMy_IPTV LIST GUNCELLENMISTIR***			 
-***23_UYDULU KANAL LIST GUNCELLENMISTIR***
-***POWERVU VE BISS KEYLER GUNCELLENMISTIR*** 
-***OSCAM VE CCAM SERVERLAR GUNCELLENMISTIR***
+             ☪️***08.08.2017***☪️
+***Ncam 1.7 EKLENMISTIR / Tandberg-Powervu-Bıss ok***
+***OSCAM_PVU ve ATV SOFTCAM PANEL GUNCELLENMISTIR***
+***POWERVU VE BISS KEYLER GUNCELLENMISTIR***
+***CCcam VE OSCam SERWERLAR GUNCELLENMISTIR***
+***23_UYDULU KANAL LIST GUNCELLENMISTIR*** 
+***ReMy_IPTV LIST_GUNCELLENMISTIR***	
+ 
              ***26.01.2017***
      ***ReMy OpenVPN Yenilenmiştir***
  ***REMY_TEAM PLUGINI GUNCELLENMISTIR***	 
-***TANDBERG FOX SPORT KEYLER GUNCELLENMISTIR*** 			 
-________________________
-
-           Email:arslan_plaza@outlook.com             
+_______________________________________________________________
+            
               ®ReMy EnigmaTurk TeaM		 
