--- a/news.txt
+++ b/news.txt
@@ -1,17 +1,17 @@
-             ***®ReMyTeaM DEPO ***
-https://github.com/remytr/enigma2
-_______________________________________________________________
-             ☪️***08.08.2017***☪️
-***Ncam 1.7 EKLENMISTIR / Tandberg-Powervu-Bıss ok***
-***OSCAM_PVU ve ATV SOFTCAM PANEL GUNCELLENMISTIR***
+____________®ReMy EnigmaTurk TeaM___________
+             ☪️***13.09.2017***☪️
+***ReMy_IPTV LIST_GUNCELLENMISTIR***
 ***POWERVU VE BISS KEYLER GUNCELLENMISTIR***
-***CCcam VE OSCam SERWERLAR GUNCELLENMISTIR***
-***23_UYDULU KANAL LIST GUNCELLENMISTIR*** 
-***ReMy_IPTV LIST_GUNCELLENMISTIR***	
+***23_UYDULU KANAL LIST GUNCELLENMISTIR***
+***REMY_TEAM PLUGINI GUNCELLENMISTIR***	
+***REMY SOFTCAM APP ve OPENATV SOFTCAM PANEL GUNCELLENMISTIR*** 
+***REMY_FULLBackup_ALL_IMAGES GUNCELLENMISTIR*** 
+***Ncam 1.7 EKLENMISTIR / Tandberg-Powervu-Bıss ok***
+***CCcam VE OSCam SERWERLAR GUNCELLENMISTIR***	
  
-             ***26.01.2017***
-     ***ReMy OpenVPN Yenilenmiştir***
+             ***24.08.2017***
  ***REMY_TEAM PLUGINI GUNCELLENMISTIR***	 
-_______________________________________________________________
-            
+____________________________________________
               ®ReMy EnigmaTurk TeaM		 
+            ***®ReMyTeaM DEPO ***
+https://github.com/remytr/enigma2
