--- a/news.txt
+++ b/news.txt
@@ -1,17 +1,18 @@
-____________®ReMy EnigmaTurk TeaM___________
-             ☪️***13.09.2017***☪️
-***ReMy_IPTV LIST_GUNCELLENMISTIR***
-***POWERVU VE BISS KEYLER GUNCELLENMISTIR***
-***23_UYDULU KANAL LIST GUNCELLENMISTIR***
+           ☪️ ®ReMy EnigmaTurk TeaM ☪️
+             ★★***03.11.2017***★★
+***YENI SYSTEM BISSLER GUNCELLENMISTIR***
 ***REMY_TEAM PLUGINI GUNCELLENMISTIR***	
+***POWERVU_TANDBERG VE BISS KEYLER GUNCELLENMISTIR***
+***23_UYDULU KANAL LIST GUNCELLENMISTIR***
+***ReMy_IPTV LIST_GUNCELLENMISTIR***
 ***REMY SOFTCAM APP ve OPENATV SOFTCAM PANEL GUNCELLENMISTIR*** 
-***REMY_FULLBackup_ALL_IMAGES GUNCELLENMISTIR*** 
-***Ncam 1.7 EKLENMISTIR / Tandberg-Powervu-Bıss ok***
-***CCcam VE OSCam SERWERLAR GUNCELLENMISTIR***	
+***ReMy_MaTRiX_MoD_Backup_ALL_IMAGES. EKLENMISTIR*** 
+***Ncam 2.X GUNCELLENMISTIR / Tandberg-Powervu-Bıss ok***
+***CCcam VE OSCam SERVERLAR GUNCELLENMISTIR***	
  
-             ***24.08.2017***
+             ***01.11.2017***
  ***REMY_TEAM PLUGINI GUNCELLENMISTIR***	 
 ____________________________________________
               ®ReMy EnigmaTurk TeaM		 
             ***®ReMyTeaM DEPO ***
-https://github.com/remytr/enigma2
+        https://github.com/remytr/enigma2
