--- a/news.txt
+++ b/news.txt
@@ -1,16 +1,14 @@
            ☪️ ®ReMy EnigmaTurk TeaM ☪️
-             ★★***03.11.2017***★★
-***YENI SYSTEM BISSLER GUNCELLENMISTIR***
-***REMY_TEAM PLUGINI GUNCELLENMISTIR***	
-***POWERVU_TANDBERG VE BISS KEYLER GUNCELLENMISTIR***
-***23_UYDULU KANAL LIST GUNCELLENMISTIR***
-***ReMy_IPTV LIST_GUNCELLENMISTIR***
+             ★★***12.12.2017***★★  
 ***REMY SOFTCAM APP ve OPENATV SOFTCAM PANEL GUNCELLENMISTIR*** 
-***ReMy_MaTRiX_MoD_Backup_ALL_IMAGES. EKLENMISTIR*** 
-***Ncam 2.X GUNCELLENMISTIR / Tandberg-Powervu-Bıss ok***
-***CCcam VE OSCam SERVERLAR GUNCELLENMISTIR***	
- 
-             ***01.11.2017***
+***POWERVU_TANDBERG VE hash2 BISS KéYSLER GUNCELLENMISTIR***		 
+***REMY_TEAM PLUGINI GUNCELLENMISTIR***
+***28_UYDULU KANAL LIST GUNCELLENMISTIR***
+***ReMy_IPTV LIST_GUNCELLENMISTIR*** 
+***REMY_YouTubeTV-WEBBROWSER-HBBTV FIX GUNCELLENMISTIR***	
+***ReMy_MaTRiX_MoD_Backup_ALL_IMAGES GUNCELLENMISTIR***
+
+             ***07.12.2017***
  ***REMY_TEAM PLUGINI GUNCELLENMISTIR***	 
 ____________________________________________
               ®ReMy EnigmaTurk TeaM		 
